# acl_conv_dfa_inference

./: .gitignore  CMakeLists.txt  README.md  compare.py  conv_dfa_wt_pad.cc  conv_dfa_wt_pad.py
include/: device.hpp
